--- a/app/src/styles/homepage.module.css
+++ b/app/src/styles/homepage.module.css
@@ -1,11 +1,10 @@
 .crousel {
   width: 100%;
-  height: 90vh;
+  min-height: 90vh;
   background-image: url("https://v5imagecollection.s3.us-east-1.amazonaws.com/gaiapng.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  overflow-y: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -24,11 +23,11 @@
 .rectangle {
   width: 100%;
   height: 35vh;
-  background-image: url('https://v5imagecollection.s3.us-east-1.amazonaws.com/Rectangle+31.png');
+  background-image: url("https://v5imagecollection.s3.us-east-1.amazonaws.com/Rectangle+31.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  bottom: 0;
+  bottom: -2px;
   left: 0;
   width: 100%;
   z-index: 10;
@@ -45,12 +44,11 @@
 
 .gaia {
   position: absolute;
-  bottom: 0;
+  top: 80px;
   left: 50%;
   transform: translateX(-50%);
   width: auto;
   z-index: 5;
-  overflow: hidden;
 }
 
 .sec2 {
@@ -68,8 +66,6 @@
   flex-direction: column;
   padding: 80px;
   box-sizing: border-box;
-  color: #457500;
-  padding: 80px;
 }
 
 .sec2 > div:nth-child(1) {
@@ -86,27 +82,61 @@
 }
 
 .btn {
-  border: 1px solid #457500;
   margin-top: 20px;
   padding: 10px;
 }
 
-
-@media (max-width: 768px){
- .sec2{
-   flex-direction: column-reverse;
- }
-
- .sec2 > div{
+.sec3 {
   width: 100%;
   height: fit-content;
-  font-size: 30px;
-  text-align: start;
-  justify-self: start;
-  align-items: start;
- }
+  padding: 40px;
+}
 
- .gaia{
-  width: 80%;
- }
+.sec4 {
+  width: 100%;
+  height: fit-content;
+  padding: 40px;
+}
+
+@media (max-width: 768px) {
+  .sec2 {
+    flex-direction: column-reverse;
+  }
+
+  .carousel {
+    overflow: hidden;
+  }
+
+  .sec2 > div {
+    padding: 10px 40px;
+    height: fit-content;
+    font-size: 30px;
+  }
+
+  .sec2 > div:nth-child(2) {
+    background-size: fit-content;
+    height: 55vh;
+    width: 100%;
+  }
+
+  .sec2 > div:nth-child(1) {
+    width: 100%;
+    padding-bottom: 40px;
+  }
+
+  .sec2 {
+    width: 100%;
+    align-items: start;
+    min-height: fit-content;
+  }
+
+  .gaia {
+    top: 60px;
+    overflow: hidden;
+  }
+
+  .sec3 {
+    width: 100%;
+    height: fit-content;
+  }
 }
